--- a/src/index.html
+++ b/src/index.html
@@ -12,29 +12,41 @@
       <nav>
         <ul class="header__list">
           <li class="header__item">
-            <a href="#" class="header__link">Каталог</a>
+            <a href="#" class="header__link" target="_blank">Каталог</a>
           </li>
           <li class="header__item">
-            <a href="#" class="header__link">Акции</a>
+            <a href="#" class="header__link" target="_blank">Акции</a>
           </li>
           <li class="header__item">
-            <a href="#" class="header__link">Доставка</a>
+            <a href="#" class="header__link" target="_blank">Доставка</a>
           </li>
           <li class="header__item">
-            <a href="#" class="header__link">Контакты</a>
+            <a href="#" class="header__link" target="_blank">Контакты</a>
           </li>
         </ul>
       </nav>
       <div class="header__icons">
-        <button class="header__btn icon-search"></button>
-        <button class="header__btn icon-fav"></button>
-        <button class="header__btn icon-basket"></button>
+        <button class="header__btn icon-search">
+          <svg class="header__icon">
+            <use xlink:href="images/sprite.svg#search"></use>
+          </svg>
+        </button>
+        <button class="header__btn icon-fav">
+          <svg class="header__icon">
+            <use xlink:href="images/sprite.svg#fav"></use>
+          </svg>
+        </button>
+        <button class="header__btn icon-basket">
+          <svg class="header__icon">
+            <use xlink:href="images/sprite.svg#basket"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
       <div class="container">
         <section class="main">
-          <div class="main__text">
+          <div class="main__info">
             <h1 class="main__title">Весна/Лето 2019</h1>
             <h2 class="main__subtitle">Коллекция</h2>
             <p class="main__paragraph">
@@ -44,12 +56,11 @@
               <br />
               и с доставкой по всему миру
             </p>
-            <a href="#" class="main__btn btn" target="_blank">
+            <a href="#" class="main__btn link" target="_blank">
               Смотреть каталог
             </a>
           </div>
           <div class="main__img">
-            <img class="main__ellipse" src="images/ellipse.png" alt="Ellipse" />
             <img class="main__watch" src="images/watch_main.png" alt="Watch" />
           </div>
           <span class="main__parameter main__parameter_left">22 000 ₽</span>
@@ -61,46 +72,214 @@
       <div class="bg-white">
         <div class="container">
           <section class="popular">
-            <h2 class="popular__title">Популярные модели</h2>
-            <a class="popular__all" href="#" target="_blank">Смотреть все</a>
-            <div class="popular__products">
-              <div class="popular__product">
-                <h4 class="popular__name">RADO</h4>
-                <span class="popular__price">65 300 ₽</span>
-                <div class="popular__img">
-                  <img class="img" src="images/watch_1.png" alt="Watch" />
-                </div>
-                <div class="popular__detail">
-                  <div class="hr"></div>
-                  <a href="#" target="_blank">Подробнее</a>
-                </div>
+            <h2 class="popular__title title">Популярные модели</h2>
+            <a class="popular__all" href="#" target="_blank">
+              <span class="popular__all_text">Смотреть все</span>
+            </a>
+            <div class="popular__product">
+              <h4 class="popular__name">RADO</h4>
+              <span class="popular__price">65 300 ₽</span>
+              <div class="popular__img">
+                <img class="img" src="images/watch_1.png" alt="Watch" />
               </div>
-              <div class="popular__product">
-                <h4 class="popular__name">BVLGARI</h4>
-                <span class="popular__price">81 700 ₽</span>
-                <div class="popular__img">
-                  <img class="img" src="images/watch_2.png" alt="Watch" />
-                </div>
-                <div class="popular__detail">
-                  <div class="hr"></div>
-                  <a href="#" target="_blank">Подробнее</a>
-                </div>
+              <div class="popular__detail">
+                <div class="hr"></div>
+                <a href="#" target="_blank">Подробнее</a>
               </div>
-              <div class="popular__product">
-                <h4 class="popular__name">BVLGARI</h4>
-                <span class="popular__price">72 700 ₽</span>
-                <div class="popular__img">
-                  <img class="img" src="images/watch_3.png" alt="Watch" />
-                </div>
-                <div class="popular__detail">
-                  <div class="hr"></div>
-                  <a href="#" target="_blank">Подробнее</a>
-                </div>
+            </div>
+            <div class="popular__product">
+              <h4 class="popular__name">BVLGARI</h4>
+              <span class="popular__price">81 700 ₽</span>
+              <div class="popular__img">
+                <img class="img" src="images/watch_2.png" alt="Watch" />
+              </div>
+              <div class="popular__detail">
+                <div class="hr"></div>
+                <a href="#" target="_blank">Подробнее</a>
+              </div>
+            </div>
+            <div class="popular__product">
+              <h4 class="popular__name">BVLGARI</h4>
+              <span class="popular__price">72 700 ₽</span>
+              <div class="popular__img">
+                <img class="img" src="images/watch_3.png" alt="Watch" />
+              </div>
+              <div class="popular__detail">
+                <div class="hr"></div>
+                <a href="#" target="_blank">Подробнее</a>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+      <div class="bg-liner-gradient">
+        <div class="container">
+          <section class="feature">
+            <div class="feature__img">
+              <img src="images/photo_banner.jpg" alt="Watch" />
+            </div>
+            <div class="feature__info">
+              <h2 class="feature__title title">Подлинное качество</h2>
+              <p class="feature__paragraph">
+                Все часы производятся в Швейцарии и имеют
+                <br />
+                сертификаты качества. Настоящие швейцарские
+                <br />
+                часы — это предмет гордости и престижа.
+              </p>
+              <a href="#" class="feature__link link" target="_blank"
+                >СМОТРЕТЬ КАТАЛОГ</a
+              >
+            </div>
+            <div class="feature__switcher">
+              <button class="feature__button feature__button_left">
+                <svg width="7" height="12">
+                  <use xlink:href="images/sprite.svg#arrow"></use>
+                </svg>
+              </button>
+              <span class="feature__counter">01</span>
+              <button class="feature__button">
+                <svg width="7" height="12">
+                  <use xlink:href="images/sprite.svg#arrow"></use>
+                </svg>
+              </button>
+            </div>
+          </section>
+        </div>
+      </div>
+      <div class="bg-white">
+        <div class="container">
+          <section class="follow">
+            <div class="follow__info">
+              <h2 class="follow__title title">Следите за нашими новостями</h2>
+              <p class="follow__paragraph">
+                Подписывайтесь на <b>@conquest_watch</b> в соцсетях <br />
+                и узнавайте о новинках и акциях первыми.
+              </p>
+              <ul class="social">
+                <li class="social__item">
+                  <a href="#" class="social__link" target="_blank">
+                    <svg class="social__icon">
+                      <use xlink:href="images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social__item">
+                  <a href="#" class="social__link" target="_blank">
+                    <svg class="social__icon">
+                      <use xlink:href="images/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social__item">
+                  <a href="#" class="social__link" target="_blank">
+                    <svg class="social__icon">
+                      <use xlink:href="images/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="plate">
+              <div class="plate__item plate__item_1">
+                <img src="images/photo_1.jpg" alt="Watch" />
+              </div>
+              <div class="plate__item plate__item_2">
+                <img src="images/photo_2.jpg" alt="Watch" />
+              </div>
+              <div class="plate__item plate__item_3">
+                <img src="images/photo_3.jpg" alt="Watch" />
               </div>
             </div>
           </section>
         </div>
       </div>
     </main>
+    <div class="bg-masala">
+      <div class="container">
+        <footer class="footer">
+          <div class="footer__item">
+            <a href="#" class="footer__logo logo" target="_blank"></a>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <span class="footer__paragraph">8 (499) 450-47-97</span>
+              </li>
+              <li class="footer__item">
+                <span class="footer__paragraph">info@conquest.watch.ru</span>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__item">
+            <h4 class="footer__title">О компании</h4>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link" target="_blank">
+                  Наши магазины
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link" target="_blank"> Вакансии </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link" target="_blank">
+                  Сертификаты
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link" target="_blank"> Отзывы </a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__item">
+            <h4 class="footer__title">Покупателям</h4>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link" target="_blank">
+                  Каталог товаров
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link" target="_blank">
+                  Как заказать?
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link" target="_blank"> FAQ </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link" target="_blank">
+                  Корпоративным клиентам
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__item">
+            <h4 class="footer__title">Оплата и доставка</h4>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link" target="_blank">
+                  Способы оплаты
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link" target="_blank">
+                  Время доставки
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link" target="_blank">
+                  Гарантии и ремонт
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link" target="_blank">
+                  Возврат и компенсация
+                </a>
+              </li>
+            </ul>
+          </div>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
