another try for adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -76,37 +76,39 @@
             <a class="popular__all" href="#" target="_blank">
               <span class="popular__all_text">Смотреть все</span>
             </a>
-            <div class="popular__product">
-              <h4 class="popular__name">RADO</h4>
-              <span class="popular__price">65 300 ₽</span>
-              <div class="popular__img">
-                <img class="img" src="images/watch_1.png" alt="Watch" />
+            <div class="popular__flex">
+              <div class="popular__product">
+                <h4 class="popular__name">RADO</h4>
+                <span class="popular__price">65 300 ₽</span>
+                <div class="popular__img">
+                  <img class="img" src="images/watch_1.png" alt="Watch" />
+                </div>
+                <div class="popular__detail">
+                  <div class="hr"></div>
+                  <a href="#" target="_blank">Подробнее</a>
+                </div>
               </div>
-              <div class="popular__detail">
-                <div class="hr"></div>
-                <a href="#" target="_blank">Подробнее</a>
+              <div class="popular__product">
+                <h4 class="popular__name">BVLGARI</h4>
+                <span class="popular__price">81 700 ₽</span>
+                <div class="popular__img">
+                  <img class="img" src="images/watch_2.png" alt="Watch" />
+                </div>
+                <div class="popular__detail">
+                  <div class="hr"></div>
+                  <a href="#" target="_blank">Подробнее</a>
+                </div>
               </div>
-            </div>
-            <div class="popular__product">
-              <h4 class="popular__name">BVLGARI</h4>
-              <span class="popular__price">81 700 ₽</span>
-              <div class="popular__img">
-                <img class="img" src="images/watch_2.png" alt="Watch" />
-              </div>
-              <div class="popular__detail">
-                <div class="hr"></div>
-                <a href="#" target="_blank">Подробнее</a>
-              </div>
-            </div>
-            <div class="popular__product">
-              <h4 class="popular__name">BVLGARI</h4>
-              <span class="popular__price">72 700 ₽</span>
-              <div class="popular__img">
-                <img class="img" src="images/watch_3.png" alt="Watch" />
-              </div>
-              <div class="popular__detail">
-                <div class="hr"></div>
-                <a href="#" target="_blank">Подробнее</a>
+              <div class="popular__product">
+                <h4 class="popular__name">BVLGARI</h4>
+                <span class="popular__price">72 700 ₽</span>
+                <div class="popular__img">
+                  <img class="img" src="images/watch_3.png" alt="Watch" />
+                </div>
+                <div class="popular__detail">
+                  <div class="hr"></div>
+                  <a href="#" target="_blank">Подробнее</a>
+                </div>
               </div>
             </div>
           </section>
@@ -115,21 +117,23 @@
       <div class="bg-liner-gradient">
         <div class="container">
           <section class="feature">
-            <div class="feature__img">
-              <img src="images/photo_banner.jpg" alt="Watch" />
-            </div>
-            <div class="feature__info">
-              <h2 class="feature__title title">Подлинное качество</h2>
-              <p class="feature__paragraph">
-                Все часы производятся в Швейцарии и имеют
-                <br />
-                сертификаты качества. Настоящие швейцарские
-                <br />
-                часы — это предмет гордости и престижа.
-              </p>
-              <a href="#" class="feature__link link" target="_blank"
-                >СМОТРЕТЬ КАТАЛОГ</a
-              >
+            <div class="feature__flex">
+              <div class="feature__img">
+                <img src="images/photo_banner.jpg" alt="Watch" />
+              </div>
+              <div class="feature__info">
+                <h2 class="feature__title title">Подлинное качество</h2>
+                <p class="feature__paragraph">
+                  Все часы производятся в Швейцарии и имеют
+                  <br />
+                  сертификаты качества. Настоящие швейцарские
+                  <br />
+                  часы — это предмет гордости и престижа.
+                </p>
+                <a href="#" class="feature__link link" target="_blank"
+                  >СМОТРЕТЬ КАТАЛОГ</a
+                >
+              </div>
             </div>
             <div class="feature__switcher">
               <button class="feature__button feature__button_left">
@@ -181,11 +185,13 @@
               </ul>
             </div>
             <div class="plate">
-              <div class="plate__item plate__item_1">
-                <img src="images/photo_1.jpg" alt="Watch" />
-              </div>
-              <div class="plate__item plate__item_2">
-                <img src="images/photo_2.jpg" alt="Watch" />
+              <div class="plate__flex">
+                <div class="plate__item plate__item_1">
+                  <img src="images/photo_1.jpg" alt="Watch" />
+                </div>
+                <div class="plate__item plate__item_2">
+                  <img src="images/photo_2.jpg" alt="Watch" />
+                </div>
               </div>
               <div class="plate__item plate__item_3">
                 <img src="images/photo_3.jpg" alt="Watch" />
